agregue un parrafo a mi proyecto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Jorge Campos</h1>
+    <p>me gusta aprender a programar</p>
+    <p>estoy en el seminario de control de versiones git</p>
 </body>
 </html>
